--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ dash-table==4.7.0
 Flask==2.0.1
 Flask-Compress==1.10.1
 future==0.18.2
+gunicorn==20.0.4
 idna==3.2
 importlib-metadata==3.10.1
 importlib-resources==5.2.2
