--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ plotly==5.5.0
 python-dateutil==2.8.2
 pytz==2021.3
 requests==2.26.0
+scipy==1.7.3
 six==1.16.0
 tenacity==8.0.1
 typing-extensions==4.0.1
