--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,15 @@ certifi==2021.10.8
 charset-normalizer==2.0.9
 click==8.0.3
 colorama==0.4.4
-dash==1.12.0
-dash-core-components==1.10.0
-dash-html-components==1.0.3
+dash==2.1.0
+dash-bootstrap-components==1.0.3
+dash-core-components==2.0.0
+dash-html-components==2.0.0
 dash-renderer==1.4.1
-dash-table==4.7.0
+dash-table==5.0.0
 Flask==2.0.2
 Flask-Compress==1.10.1
 future==0.18.2
-gunicorn==20.0.4
 idna==3.3
 importlib-metadata==4.10.0
 itsdangerous==2.0.1
