--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ dash-table==5.0.0
 Flask==2.0.2
 Flask-Compress==1.10.1
 future==0.18.2
+gunicorn==20.0.4
 idna==3.3
 importlib-metadata==4.10.0
 itsdangerous==2.0.1
